--- a/bluez-alsa/Makefile
+++ b/bluez-alsa/Makefile
@@ -54,6 +54,8 @@ define Package/bluez-alsa/install
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/utils/aplay/bluealsa-aplay $(1)/usr/bin/
 	$(INSTALL_DIR) $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/bluealsa.init $(1)/etc/init.d/bluealsa
+	$(INSTALL_DIR) $(1)/etc/dbus-1/system.d/
+	$(CP) $(PKG_BUILD_DIR)/src/bluealsa.conf $(1)/etc/dbus-1/system.d/
 endef
 
 $(eval $(call BuildPackage,bluez-alsa))
